tests/rosetta/out/C/15-puzzle-solver.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:35Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:35:35Z
#include <stdio.h>
#include <stdlib.h>

int main() {
  printf("%d\n", testpkg.fifteen_puzzle_example());
  return 0;
}
